Test_Files/abstract_vm/Error/format4.asm
;     Format 4
;   ============
;   Error test 6

push int8(45) int8(24)
push
dump int16(23)
assert
add float(12.8)
dump
exit
